--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -505,7 +505,7 @@ managed (process).
 \end{block}
 \medskip
 
- \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Cases studies: why ERM fails ? }}
+ \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Cases studies 1 and 2 }}
 
 \end{frame}
 
@@ -862,7 +862,7 @@ the framework is cosmetic.
 %========================
 % Slide 3: Transition to Architecture
 %========================
-\begin{frame}{Transition: From Framework to Architecture}
+\begin{frame}{From Framework to Architecture}
 
 A framework specifies \textbf{what should happen}.  
 Architecture determines \textbf{who makes it happen} and \textbf{how power and information flow}.
@@ -888,5 +888,922 @@ Architecture determines \textbf{who makes it happen} and \textbf{how power and i
 \end{itemize}
 
 \end{frame}
+\begin{frame}{ERM Architecture: Core functions}
+
+ERM architecture is a governance system that performs four critical functions.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Allocation of decision rights}\\
+  Determines who can take risk, within which limits, and under what conditions.
+
+  \item[$\bullet$] \textbf{Independent challenge}\\
+  Ensures that risk-taking decisions are reviewed and contested by actors
+  without direct profit incentives.
+
+  \item[$\bullet$] \textbf{Information and escalation}\\
+  Guarantees that material risks reach the appropriate decision level in time.
+
+  \item[$\bullet$] \textbf{Assurance and accountability}\\
+  Verifies that controls work and assigns responsibility when outcomes diverge.
+\end{itemize}
+
+\begin{block}{Organizing principle}
+Architecture is about enforcement, not reporting.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Decision rights and Risk-taking}
+
+Risk originates from decisions, not models.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Business units make local decisions that generate enterprise-wide
+  risk exposure.
+
+  \item[$\bullet$] Risk-taking authority is delegated but constrained by mandates,
+  limits, and escalation triggers.
+
+  \item[$\bullet$] When decision rights are implicit or informal, risk accumulates
+  outside governance boundaries.
+\end{itemize}
+
+\begin{block}{Failure pattern}
+Most risk is taken where governance is weakest.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Independent challenge and oversight}
+
+Effective ERM requires structured disagreement.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] The CRO provides an enterprise-wide perspective and challenges
+  business decisions that conflict with appetite.
+
+  \item[$\bullet$] Independence is necessary but insufficient; influence and access
+  to decision-makers are equally critical.
+
+  \item[$\bullet$] Challenge fails when it is perceived as advisory rather than
+  consequential.
+\end{itemize}
+
+\begin{block}{Key tension}
+The CRO has responsibility without direct authority.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Information flow and escalation}
+
+ERM architecture lives or dies through escalation.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Risk information must travel upward without filtering,
+  delay, or strategic framing.
+
+  \item[$\bullet$] Escalation thresholds define when risk becomes a governance
+  issue rather than an operational one.
+
+  \item[$\bullet$] Escalation mechanisms must still function when incentives
+  push toward silence.
+\end{itemize}
+
+\begin{block}{Diagnostic test}
+Would bad news still be escalated if it threatened careers?
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Assurance and accountability}
+
+Controls without assurance create an illusion of safety.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Internal audit independently verifies the effectiveness of
+  risk controls and reporting.
+
+  \item[$\bullet$] Assurance focuses on whether controls work in practice,
+  not whether they exist on paper.
+
+  \item[$\bullet$] Clear accountability strengthens incentives to respect limits
+  and escalation rules.
+\end{itemize}
+
+\begin{block}{Common mistake}
+Auditing processes instead of risk outcomes.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{ERM Architecture under pressure}
+
+ERM architecture is revealed when conditions deteriorate.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Growth phases weaken constraints and encourage overrides.
+  \item[$\bullet$] Stress exposes information bottlenecks and authority gaps.
+  \item[$\bullet$] Weak architectures fail silently before losses appear.
+\end{itemize}
+
+\begin{block}{Final takeaway}
+Architecture determines whether ERM constrains behavior or merely documents it.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{ERM architecture in banks: why it is specific}
+
+Banking ERM architecture is shaped by the interaction between
+risk-taking, capital, and financial stability.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Banks operate with \textbf{high leverage}, making small
+  shocks potentially systemic rather than firm-specific.
+
+  \item[$\bullet$] Risk-taking decisions directly affect \textbf{capital adequacy},
+  liquidity, and solvency.
+
+  \item[$\bullet$] ERM architecture must therefore satisfy not only shareholders,
+  but also \textbf{supervisors and the financial system}.
+\end{itemize}
+
+\begin{block}{Key implication}
+In banks, ERM architecture is inseparable from regulation and supervision.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Basel framework as an architectural constraint}
+
+The Basel framework embeds risk constraints into bank governance.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Capital requirements limit the amount of risk that can be
+  absorbed by the balance sheet.
+
+  \item[$\bullet$] Risk-weighted assets translate heterogeneous risks into
+  a common capital metric.
+
+  \item[$\bullet$] Liquidity and leverage ratios constrain funding structures
+  and balance sheet expansion.
+
+  \item[$\bullet$] These constraints shape risk-taking incentives before
+  management discretion intervenes.
+\end{itemize}
+
+\begin{block}{Architectural role}
+Basel rules act as ex ante enforcement of risk appetite at system level.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{ICAAP: linking ERM to capital and stress}
+
+The Internal Capital Adequacy Assessment Process (ICAAP)
+is the core internal ERM mechanism in banks.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] ICAAP translates the bank’s risk profile into internal
+  capital needs under normal and stressed conditions.
+
+  \item[$\bullet$] It forces management to articulate assumptions about
+  risk, correlations, and tail events.
+
+  \item[$\bullet$] Stress testing within ICAAP reveals vulnerabilities
+  not captured by standard risk metrics.
+
+  \item[$\bullet$] ICAAP connects risk appetite, capital planning, and strategy.
+\end{itemize}
+
+\begin{block}{Failure pattern}
+ICAAP fails when it becomes a regulatory document rather than a
+decision-making tool.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Resolution and SRB: architecture under failure}
+
+ERM architecture in banks extends beyond survival scenarios.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Resolution frameworks assume that banks can fail and
+  design mechanisms to contain systemic impact.
+
+  \item[$\bullet$] The Single Resolution Board (SRB) evaluates resolvability
+  and loss-absorbing capacity.
+
+  \item[$\bullet$] ERM must therefore consider not only risk prevention,
+  but also \textbf{orderly failure}.
+
+  \item[$\bullet$] Risk-taking inconsistent with resolvability constraints
+  undermines the credibility of ERM.
+\end{itemize}
+
+\begin{block}{Architectural insight}
+In banking, ERM must be credible even in failure.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Synthesis: banking ERM as layered enforcement}
+
+\begin{itemize}
+  \item[$\bullet$] Basel sets system-wide minimum constraints.
+  \item[$\bullet$] ICAAP internalizes risk into capital planning.
+  \item[$\bullet$] Governance bodies arbitrate trade-offs.
+  \item[$\bullet$] Resolution frameworks discipline excessive risk-taking.
+\end{itemize}
+
+\begin{block}{Key takeaway}
+Banking ERM architecture is effective only when regulatory,
+internal, and governance layers reinforce each other.
+\end{block}
+
+\end{frame}
+\begin{frame}{Risk culture: the missing enforcement layer}
+
+Formal architecture cannot fully constrain behavior.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Risk culture shapes how individuals interpret rules,
+  limits, and escalation thresholds.
+
+  \item[$\bullet$] It determines whether risk signals are amplified or
+  suppressed within the organization.
+
+  \item[$\bullet$] Culture becomes decisive when rules are ambiguous
+  or incomplete.
+\end{itemize}
+
+\begin{block}{Lam’s insight}
+Risk culture determines how ERM functions when no one is watching.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Incentives and risk-taking behavior}
+
+Incentives translate abstract objectives into concrete behavior.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Compensation structures influence risk-taking more
+  powerfully than formal policies.
+
+  \item[$\bullet$] Short-term performance incentives encourage risk
+  accumulation that may only materialize later.
+
+  \item[$\bullet$] Poorly designed incentives weaken escalation and
+  encourage limit overrides.
+\end{itemize}
+
+\begin{block}{Behavioral mechanism}
+People manage what they are rewarded for.
+\end{block}
+
+\end{frame}
+\begin{frame}{Tone from the top and challenge culture}
+
+Leadership behavior sets the effective risk boundary.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Tone from the top signals whether risk management
+  is valued or tolerated.
+
+  \item[$\bullet$] A strong challenge culture allows disagreement
+  without career penalties.
+
+  \item[$\bullet$] Silence in meetings often reflects incentives,
+  not consensus.
+\end{itemize}
+
+\begin{block}{Diagnostic question}
+Are people rewarded for raising inconvenient risk concerns?
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Why ERM still fails despite strong architecture}
+
+Even robust ERM architectures can collapse.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Incentives overpower formal constraints.
+  \item[$\bullet$] Escalation is perceived as costly or futile.
+  \item[$\bullet$] Success reinforces overconfidence and risk drift.
+\end{itemize}
+
+\begin{block}{Final takeaway}
+ERM fails when incentives and culture neutralize governance.
+\end{block}
+\medskip 
+
+ \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Case study 3}}
+\end{frame}
+
+\subsection{Chap1}
+\begin{frame}{}
+
+\centering
+\color{blue} \Ovalbox{\textbf{ERM and decision-making}}
+
+\end{frame}
+
+\begin{frame}{Why risk-adjusted performance metrics exist}
+
+Accounting performance measures ignore the uncertainty underlying returns.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Two activities can generate identical profits while exposing
+  the organization to very different downside risks.
+
+  \item[$\bullet$] Risk-adjusted performance metrics explicitly relate expected
+  returns to the amount of risk or capital required to sustain them.
+
+  \item[$\bullet$] Their primary function is to make heterogeneous activities
+  comparable from a decision-maker’s perspective.
+\end{itemize}
+
+\begin{block}{Decision purpose}
+Risk-adjusted metrics enable ranking and allocation, not prediction.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{RAROC and EVA: what they measure and why they exist}
+
+RAROC and EVA are economic performance metrics designed to link
+risk, capital, and value creation.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{RAROC (Risk-Adjusted Return on Capital)} measures
+  the expected return of an activity relative to the amount of economic capital
+  required to absorb unexpected losses. It answers the question:
+  \emph{How much return do we earn per unit of risk-bearing capacity consumed?}
+
+  \item[$\bullet$] \textbf{EVA (Economic Value Added)} measures value creation
+  by comparing operating profits to the full cost of capital, including the
+  opportunity cost of bearing risk. It answers the question:
+  \emph{Does this activity create value once risk is fully priced?}
+
+  \item[$\bullet$] Used together, RAROC supports \textbf{relative ranking and
+  capital allocation}, while EVA supports \textbf{value creation assessment}
+  at firm or business-unit level.
+\end{itemize}
+
+\begin{block}{Important clarification}
+RAROC and EVA structure decision-making under uncertainty; they are not
+precise valuation tools.
+\end{block}
+
+
+\end{frame}
+
+\begin{frame}{ERM as a strategic discipline}
+
+Strategy is inseparable from risk-taking.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Strategic choices determine which risks the organization
+  deliberately accepts in pursuit of value.
+
+  \item[$\bullet$] ERM makes these choices explicit, coherent, and consistent
+  with risk-bearing capacity.
+
+  \item[$\bullet$] When conditions change, ERM provides the basis for revising
+  strategy rather than reacting after losses materialize.
+\end{itemize}
+
+\begin{block}{Final insight}
+ERM is effective when it shapes strategy ex ante, not when it explains
+failures ex post.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Why risk-adjusted decision-making still fails}
+
+Even when risk-adjusted metrics are available, decisions may ignore them.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Incentives may favor short-term accounting performance over
+  risk-adjusted value creation.
+
+  \item[$\bullet$] Portfolio effects and correlations may be underestimated,
+  leading to excessive concentration.
+
+  \item[$\bullet$] Model assumptions may understate tail risks, especially
+  during benign periods.
+
+  \item[$\bullet$] Governance may allow exceptions that neutralize discipline.
+\end{itemize}
+
+\begin{block}{Link to ERM}
+Risk-adjusted metrics require architecture, incentives, and culture
+to be effective.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Exercise 1: risk-adjusted performance and allocation}
+
+A bank considers three business activities competing for limited capital.
+Expected annual figures are shown below.
+
+\medskip
+
+\centering
+\begin{tabular}{lccc}
+\hline
+ & Activity A & Activity B & Activity C \\
+\hline
+Expected profit (€m) & 12 & 9 & 6 \\
+Economic capital (€m) & 60 & 30 & 15 \\
+\hline
+\end{tabular}
+
+\medskip
+
+The bank has a total economic capital budget of €75m
+and a target RAROC of 15\%.
+
+\begin{enumerate}
+  \item Compute the RAROC of each activity.
+
+  \item Rank the activities based on their risk-adjusted performance.
+
+  \item Given the capital constraint, which activities should the bank
+  prioritize?
+
+  \item Is it optimal to select only the activity with the highest RAROC?
+  Explain.
+
+  \item How does this exercise illustrate the role of ERM in capital allocation?
+\end{enumerate}
+
+\end{frame}
+
+
+\begin{frame}{Exercise 2: portfolio view and strategy}
+
+The bank currently operates Activity B and Activity C from Exercise 1.
+Management considers adding Activity A to boost profitability.
+
+\medskip
+
+Additional information:
+\begin{itemize}
+  \item[$\bullet$] Activity A and B are exposed to the same economic sector.
+  \item[$\bullet$] Activity C is weakly correlated with A and B.
+  \item[$\bullet$] Under adverse conditions, losses on A and B tend to
+  materialize simultaneously.
+\end{itemize}
+
+The bank’s stated strategy emphasizes resilience and stable earnings.
+
+
+\begin{enumerate}
+  \item From a standalone perspective, does Activity A appear attractive?
+  Why?
+
+  \item How do correlation and concentration change the risk assessment at
+  portfolio level?
+
+  \item Why might a portfolio-level perspective contradict the RAROC ranking?
+
+  \item Is the proposed expansion consistent with the bank’s stated strategy?
+
+  \item What additional information would ERM require before approving
+  this decision?
+\end{enumerate}
+
+\end{frame}
+
+\subsection{Chap1}
+\begin{frame}{}
+
+\centering
+\color{blue} \Ovalbox{\textbf{ERM and core risk categories}}
+
+\end{frame}
+\begin{frame}{Credit risk in ERM}
+
+Credit risk is the risk of loss arising from counterparty failure.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Traditional credit risk focuses on probability of default
+  and loss given default at individual exposure level.
+
+  \item[$\bullet$] From an ERM perspective, concentration, correlation, and
+  cyclicality are often more dangerous than isolated defaults.
+
+  \item[$\bullet$] Credit risk interacts strongly with market conditions,
+  liquidity, and strategy during downturns.
+\end{itemize}
+
+\begin{block}{ERM role}
+Ensure credit growth, portfolio concentration, and capital planning remain
+consistent with risk appetite.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{How ERM governs credit risk hedging}
+
+ERM governs credit risk hedging as a portfolio and capital decision.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Risk appetite and scope:} ERM determines which credit
+  risks are core to the business model and should be retained, and which
+  exposures (e.g.\ sectoral or single-name concentration) should be reduced.
+
+  \item[$\bullet$] \textbf{Hedging instruments:} ERM guides the use of
+  collateral, guarantees, credit insurance, credit default swaps (CDS),
+  securitization, or portfolio sales depending on objectives.
+
+  \item[$\bullet$] \textbf{Portfolio focus:} Hedging targets correlation,
+  concentration, and tail exposure rather than individual defaults.
+
+  \item[$\bullet$] \textbf{Secondary risks:} ERM assesses counterparty risk,
+  liquidity risk, basis risk, and legal risk introduced by credit hedges.
+
+  \item[$\bullet$] \textbf{Governance:} Limits are set on hedge reliance,
+  counterparty exposure, and complex structures, with escalation for exceptions.
+\end{itemize}
+
+\begin{block}{ERM principle}
+Credit hedging arbitrates risk transfer versus capital usage at enterprise level.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Market risk in ERM}
+
+Market risk arises from changes in prices, rates, and spreads.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Day-to-day volatility is usually manageable and expected.
+
+  \item[$\bullet$] The main ERM challenge lies in tail events, correlation
+  breakdowns, and forced deleveraging.
+
+  \item[$\bullet$] Market risk becomes systemic when combined with leverage
+  and liquidity constraints.
+\end{itemize}
+
+\begin{block}{ERM role}
+Prevent market risk from amplifying into solvency or liquidity crises.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{How ERM governs market risk hedging}
+
+Market risk hedging balances volatility reduction with liquidity and strategy.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Risk tolerance:} ERM defines acceptable earnings
+  volatility and tail losses, which determines the extent of hedging.
+
+  \item[$\bullet$] \textbf{Hedging instruments:} Forwards, futures, swaps,
+  options, and structured derivatives are used to reshape exposure profiles.
+
+  \item[$\bullet$] \textbf{Hedging design:} ERM distinguishes between linear
+  hedges (cost-efficient) and optional hedges (tail protection).
+
+  \item[$\bullet$] \textbf{Secondary risks:} ERM evaluates margin calls,
+  liquidity needs, basis risk, and counterparty exposure arising from hedges.
+
+  \item[$\bullet$] \textbf{Governance:} ERM limits speculative hedging,
+  complexity, and model-dependent strategies.
+\end{itemize}
+
+\begin{block}{ERM principle}
+Market hedging reduces volatility but must preserve liquidity and resilience.
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}{Operational risk in ERM}
+
+Operational risk arises from failures in processes, systems, people, or governance.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Operational risk is often treated as residual, but it
+  frequently triggers or amplifies other risk categories.
+
+  \item[$\bullet$] Weak controls, poor data, or governance failures can turn
+  manageable risks into severe losses.
+
+  \item[$\bullet$] Culture, incentives, and decision processes are key drivers
+  of operational risk.
+\end{itemize}
+
+\begin{block}{ERM role}
+Identify structural weaknesses that cut across all risk categories.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{How ERM governs operational risk mitigation}
+
+Operational risk is mitigated primarily through governance and controls.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Risk identification:} ERM identifies critical
+  processes whose failure could amplify financial or strategic risks.
+
+  \item[$\bullet$] \textbf{Instruments and tools:} Insurance contracts,
+  outsourcing agreements, redundancy systems, and business continuity plans.
+
+  \item[$\bullet$] \textbf{Control design:} ERM prioritizes investments in
+  systems, controls, and data quality based on risk materiality.
+
+  \item[$\bullet$] \textbf{Secondary risks:} ERM evaluates dependency risk,
+  legal risk, and residual exposure not covered by insurance.
+
+  \item[$\bullet$] \textbf{Governance:} Clear accountability and reporting
+  lines are enforced for operational incidents.
+\end{itemize}
+
+\begin{block}{ERM principle}
+Operational risk mitigation improves how the organization functions.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Liquidity risk in ERM}
+
+Liquidity risk arises when obligations cannot be met without severe cost.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Liquidity risk materializes abruptly and is highly
+  non-linear.
+
+  \item[$\bullet$] It often results from interactions between market stress,
+  funding structures, and confidence.
+
+  \item[$\bullet$] Liquidity crises frequently occur despite compliance with
+  other risk limits.
+\end{itemize}
+
+\begin{block}{ERM role}
+Ensure that growth, leverage, and funding strategies remain resilient
+under stress.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{How ERM governs liquidity risk mitigation}
+
+Liquidity risk is governed structurally rather than hedged transaction by transaction.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Risk tolerance:} ERM defines survival horizons and
+  stress scenarios under which liquidity must be preserved.
+
+  \item[$\bullet$] \textbf{Instruments and tools:} High-quality liquid assets
+  (HQLA), committed credit lines, central bank facilities, and funding
+  diversification.
+
+  \item[$\bullet$] \textbf{Structural constraints:} ERM constrains maturity
+  transformation, leverage, and reliance on short-term funding.
+
+  \item[$\bullet$] \textbf{Secondary risks:} ERM assesses rollover risk,
+  collateral availability, and market access under stress.
+
+  \item[$\bullet$] \textbf{Governance:} Contingency funding plans and escalation
+  protocols are embedded in ERM.
+\end{itemize}
+
+\begin{block}{ERM principle}
+Liquidity resilience is achieved through structure, not derivatives.
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}{Strategic risk in ERM}
+
+Strategic risk arises from flawed assumptions, choices, or execution.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Strategic risk is forward-looking and often difficult
+  to quantify.
+
+  \item[$\bullet$] It reflects misalignment between strategy, environment,
+  and risk-bearing capacity.
+
+  \item[$\bullet$] Most major failures are strategic in nature, even if
+  losses appear as credit or market losses.
+\end{itemize}
+
+\begin{block}{ERM role}
+Challenge strategic assumptions and test resilience under alternative scenarios.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{How ERM governs strategic risk}
+
+Strategic risk is governed through flexibility and disciplined choice.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Risk framing:} ERM challenges strategic assumptions
+  using scenarios and stress testing rather than point forecasts.
+
+  \item[$\bullet$] \textbf{Instruments and mechanisms:} Real options, staged
+  investments, exit clauses, diversification, partnerships, and joint ventures.
+
+  \item[$\bullet$] \textbf{Irreversibility control:} ERM limits commitments that
+  could lock the organization into fragile strategies.
+
+  \item[$\bullet$] \textbf{Secondary risks:} ERM evaluates reputational,
+  political, and long-horizon risks created by strategic choices.
+
+  \item[$\bullet$] \textbf{Governance:} Strategic decisions are subjected to
+  explicit risk challenge at board level.
+\end{itemize}
+
+\begin{block}{ERM principle}
+Strategic risk is reduced by preserving optionality, not by eliminating risk.
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}{Risk categories are not silos}
+
+Enterprise risk emerges from interactions.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Credit stress can trigger market losses and liquidity runs.
+
+  \item[$\bullet$] Operational failures can magnify all other risks.
+
+  \item[$\bullet$] Strategic errors often determine the scale of losses.
+\end{itemize}
+
+\begin{block}{Key message}
+ERM exists to arbitrate interactions, not to optimize silos.
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}{Derivatives in ERM: why they are ubiquitous}
+
+Derivatives are the dominant instruments for hedging because they allow
+precise and flexible risk transfer.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Derivatives isolate specific risk factors (rates, prices,
+  spreads, FX) without requiring changes to the underlying business activity.
+
+  \item[$\bullet$] They enable rapid adjustment of exposures, which is
+  particularly valuable when risks evolve faster than balance sheets.
+
+  \item[$\bullet$] Compared to structural changes, derivatives are often
+  capital-efficient and operationally convenient.
+\end{itemize}
+
+\begin{itemize}
+  \item[$\bullet$] However, derivatives do not remove risk from the system;
+  they transform it into counterparty, liquidity, model, and governance risks.
+
+  \item[$\bullet$] As a result, derivative usage is not a technical decision
+  but an enterprise risk decision.
+\end{itemize}
+
+\begin{block}{ERM perspective}
+Derivatives are powerful risk-shaping tools, but they require strict governance
+to avoid amplifying enterprise risk.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Hedging assessment}
+
+ERM assesses hedging both \emph{before} and \emph{after} implementation.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Unhedged and hedged positions:}
+  Let $X$ denote the unhedged exposure and $H$ the hedging instrument.
+  The hedged position is defined as:
+  \[
+  Y = X - hH
+  \]
+  where $h$ is the hedge ratio chosen by the firm.
+
+  \item[$\bullet$] \textbf{Hedge ratio (definition):}
+  The hedge ratio represents the quantity of hedging instrument used per unit
+  of exposure. A common benchmark is the minimum-variance hedge ratio:
+  \[
+  h^* = \frac{\mathrm{Cov}(X,H)}{\mathrm{Var}(H)}
+  \]
+  used as a reference rather than a mechanical rule in ERM.
+\end{itemize}
+
+  \end{frame}
+
+\begin{frame}{Hedging assessment}
+\begin{itemize}
+
+  \item[$\bullet$] \textbf{Prospective effectiveness (ex ante):}
+  ERM evaluates whether the hedge is expected to reduce risk:
+  \[
+  \text{HE}_{\text{pros}} = 1 - 
+  \frac{\mathrm{Var}(Y)}{\mathrm{Var}(X)}
+  \]
+  based on assumptions about correlation, volatility, and stress scenarios.
+
+  \item[$\bullet$] \textbf{Retrospective effectiveness (ex post):}
+  After implementation, ERM reassesses realized performance:
+  \[
+  \text{HE}_{\text{retro}} = 1 -
+  \frac{\mathrm{Var}(X - hH)}{\mathrm{Var}(X)}
+  \]
+  to detect model drift, breakdowns, or unintended risk amplification.
+
+  \item[$\bullet$] \textbf{ERM extension to tail risk:}
+  Effectiveness is also assessed on downside risk:
+  \[
+  \Delta ES = ES(X) - ES(Y)
+  \]
+  complemented by analysis of liquidity and margin impacts.
+\end{itemize}
+
+\begin{block}{ERM interpretation}
+A hedge is acceptable only if prospective and retrospective effectiveness
+remain robust under stress and do not create secondary enterprise risks.
+\end{block}
+
+\end{frame}
+
 
 \end{document}
